# MinKy

./: .dockerignore  .env  .env.example  .env.production  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  MIGRATION_PLAN.md  MIGRATION_PROGRESS.md  MINKY.md  PLAN.md  PROGRESS.md  README.md  SECURITY.md  SECURITY_REVIEW.md  SPRINT_PLAN.md  deploy.sh  docker-compose.cas.yml  docker-compose.yml  fix_image_urls.sql  mypy.ini  package-lock.json  requirements.txt  ruff.toml  run.py  test_debug.py
minky-rust/: .env.example  Cargo.toml  Dockerfile
minky-rust/benches/: core_functions.rs
minky-rust/migrations/: 001_initial_schema.sql  002_workflows.sql  003_pgvector_embeddings.sql  004_search_history.sql  005_slack_platform.sql  006_pipeline_jobs.sql  007_document_functions.sql  008_hybrid_search.sql  009_local_embedding_model.sql  010_document_source_path.sql  011_flask_compat_columns.sql
minky-rust/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
minky-rust/src/middleware/: auth.rs  extractor.rs  mod.rs  rate_limit.rs
minky-rust/src/models/: admin.rs  agent.rs  ai.rs  analytics.rs  attachment.rs  audit.rs  category.rs  comment.rs  document.rs  embedding.rs  export.rs  export_theme.rs  function.rs  git.rs  harness.rs  hierarchical_context.rs  knowledge_graph.rs  korean.rs  ml.rs  mod.rs  notification.rs  ocr.rs  rag.rs  search.rs  security.rs  skill.rs  slack.rs  sync.rs  tag.rs  template.rs  timeline.rs  user.rs  version.rs  websocket.rs  workflow.rs
minky-rust/src/pipeline/: builder.rs  context.rs  error.rs  mod.rs  stage.rs
minky-rust/src/routes/: admin.rs  agents.rs  ai.rs  analytics.rs  attachments.rs  auth.rs  categories.rs  comments.rs  common.rs  documents.rs  embeddings.rs  export.rs  git.rs  harness.rs  health.rs  hybrid.rs  knowledge.rs  korean.rs  ml.rs  mod.rs  notifications.rs  ocr.rs  pipeline.rs  rag.rs  search.rs  security.rs  skills.rs  slack.rs  sync.rs  tags.rs  templates.rs  timeline.rs  understanding.rs  vault.rs  versions.rs  workflows.rs  ws.rs
minky-rust/src/services/: admin_service.rs  agent_service.rs  ai_service.rs  mod.rs  (+40 more)
minky-rust/tests/: document_routes_test.rs  health_test.rs  knowledge_graph_model_test.rs  upload_test.rs
(+827 files in other folders)
