[package]
name = "minky"
version = "0.1.0"
edition = "2021"
description = "MinKy Document Management System - Rust Backend"
authors = ["Mario Cho <hephaex@gmail.com>"]
license = "MIT"
repository = "https://github.com/hephaex/minky"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit"] }

# Async Runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP Client (for external APIs)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# OpenSearch
opensearch = "2.3"

# File Processing
image = "0.25"
mime_guess = "2.0"
tempfile = "3.14"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Security
secrecy = { version = "0.10", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"

# Text Processing
regex = "1.11"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
fake = { version = "3.0", features = ["derive"] }
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.dev.package."*"]
opt-level = 3
